[package]
name = "portsqan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "11.0.0"
ctrlc = "3.4.0"
crossbeam = "0.8.2"
clap = "4.3.3"
server = { path = '../server'}
parser = { path = '../parser'}
libportsqan = { path = '../libportsqan' }